<resources>
    <string name="app_name">U-Book</string>
    <string name="name_title">U-Book</string>
    <string name="sub_title">Comunidad de Intercambio, donación y venta de libros usados</string>
    <string name="btn_find">Buscar Libros</string>
    <string name="btn_upload">Agregar Libro</string>
    <string name="btn_list">Listar Libros</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="img_cover">Cover Libro</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    // otros strings
    <string name="titulo">U-Book</string>
    <string name="sub_Titulo">Comunidad de Intercambio, donación y venta de libros usados</string>
    <string name="libro_titulo">Titulo *</string>
    <string name="libro_descripcion">Descripción</string>
    <string name="libro_categoria">Categoria *</string>
    <string name="libro_contacto">Contacto(Teléfono o Email) *</string>
    <string name="libro_punto_de_entrega">Punto de entrega *</string>
    <string name="libro_idioma">Idioma *</string>
    <string name="libro_dimensiones">Dimensiones</string>
    <string name="libro_autor">Autor *</string>
    <string name="libro_isbn">ISBN (sin guiones)</string>
    <string name="libro_fotos">Foto *</string>
    <string name="libro_agregar_fotos">Sacar Foto</string>
    <string name="libro_tipo_transaccion">Tipo de Transacción *</string>
    <string name="libro_precio">Precio</string>
    <string name="modo">Modo</string>
    <string name="InfoLibro">Agregar Libro</string>
    <string name="bk_empty_view">No hay libros disponible</string>
    <string-array name="tipoTransaccionArray">
        <item> </item>
        <item>Venta</item>
        <item>Intercambio</item>
        <item>Donacion</item>
    </string-array>
    <string-array name="condicionArray">
        <item> </item>
        <item>Drama</item>
        <item>Ciencia Ficción</item>
        <item>Romance</item>
        <item>Aventura</item>
        <item>Tecnología</item>
        <item>Salud</item>
        <item>Thrillers</item>
    </string-array>
    <string-array name="libro_punto_de_entrega_array">
        <item> </item>
        <item>Zona 1 Montevideo Shopping</item>
        <item>Zona 2 Tres Cruces Shopping</item>
        <item>Zona 3 Nuevo Centro Shopping</item>
        <item>Zona 4 Punta Carreta Shopping</item>
        <item>Zona 5 Portones Shopping</item>
    </string-array>
    <string name="title_activity_maps_books">Map</string>
</resources>